--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,14 @@ dependencies {
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
+
+    //Desenfoque de las imagenes de fondo
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    implementation 'jp.wasabeef:glide-transformations:4.3.0'
+    implementation 'androidx.core:core:1.10.0'
+
+
+
+
 }
