Modificaciones XML y Java de registro y tipo de registro

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,8 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    // hay que cambiar la versio a JavaVersion.VERSION_11
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
