--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,35 +12,30 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Cuidame"
         tools:targetApi="31">
-      
-        <activity
-            android:name=".TipoDeRegistro"
-            android:exported="false" />
-      
-          <activity
-            android:name=".Welcome"
-            android:exported="false" />
-      
         <activity
             android:name=".Splash"
             android:exported="true" />
-        
-          <activity
+        <activity
+            android:name=".TipoDeRegistro"
+            android:exported="true" />
+        <activity
+            android:name=".Welcome"
+            android:exported="true" />
+        <activity
             android:name=".MainActivity"
+            android:exported="true" />
+        <activity
+            android:name=".Login"
             android:exported="true">
-         
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".Registro"
-            android:exported="false"/>
-
-
+            android:exported="true" />
 
         <meta-data
             android:name="preloaded_fonts"
