--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,17 +12,22 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Cuidame"
         tools:targetApi="31">
-      
-        <activity
-            android:name=".TipoDeRegistro"
-            android:exported="false" />
-      
-          <activity
-            android:name=".Welcome"
-            android:exported="true" />
-      
+
         <activity
             android:name=".Splash"
+            android:exported="false" />
+
+        <activity
+            android:name=".Welcome"
+            android:exported="false" />
+
+        <activity
+            android:name=".Login"
+            android:exported="false" />
+
+
+        <activity
+            android:name=".TipoDeRegistro"
             android:exported="true" >
 
             <intent-filter>
@@ -31,15 +36,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-          <activity
+
+        <activity
+            android:name=".Registro"
+            android:exported="false"/>
+
+        <activity
             android:name=".MainActivity"
             android:exported="false"/>
 
 
 
-        <activity
-            android:name=".Registro"
-            android:exported="false"/>
+
 
         <meta-data
             android:name="preloaded_fonts"
