--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     implementation 'jp.wasabeef:glide-transformations:4.3.0'
     implementation 'androidx.core:core:1.10.0'
 
+    implementation 'androidx.appcompat:appcompat:1.6.0'  // Para usar Toolbar y AppCompatActivity
+    implementation 'com.google.android.material:material:1.9.0'  // Para Material Components (si usas Material Design)
 
 
 
