--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,34 +12,33 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Cuidame"
         tools:targetApi="31">
-
+        <activity
+            android:name=".PerfilPublico"
+            android:exported="true" />
+        <activity
+            android:name=".Perfil"
+            android:exported="true" />
         <activity
             android:name=".Splash"
             android:exported="true" />
-      
         <activity
             android:name=".TipoDeRegistro"
             android:exported="true" />
-      
         <activity
             android:name=".Welcome"
             android:exported="true" />
-      
         <activity
             android:name=".MainActivity"
             android:exported="true" />
-      
         <activity
             android:name=".Login"
             android:exported="true">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".Registro"
             android:exported="true" />
