--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
 
     defaultConfig {
         applicationId "com.synunezcamacho.cuidame"
-        minSdk 26
+        minSdk 28
         targetSdk 34
         versionCode 1
         versionName "1.0"
@@ -36,6 +36,7 @@ dependencies {
     implementation libs.material
     implementation libs.activity
     implementation libs.constraintlayout
+    implementation libs.car.ui.lib
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
@@ -48,6 +49,14 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.6.0'  // Para usar Toolbar y AppCompatActivity
     implementation 'com.google.android.material:material:1.9.0'  // Para Material Components (si usas Material Design)
+
+
+    implementation 'com.google.android.gms:play-services-maps:19.0.0'
+    implementation  'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation  'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation  'com.google.maps.android:android-maps-utils:2.2.5'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
+
 
 
 
