--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Cuidame"
         tools:targetApi="31">
         <activity
+            android:name=".Chat"
+            android:exported="true" />
+        <activity
+            android:name=".Contacto"
+            android:exported="true" />
+        <activity
             android:name=".PerfilPublico"
             android:exported="true" />
         <activity
