--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -37,6 +40,8 @@ dependencies {
     implementation libs.activity
     implementation libs.constraintlayout
     implementation libs.car.ui.lib
+    implementation libs.navigation.fragment
+    implementation libs.navigation.ui
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
@@ -56,6 +61,7 @@ dependencies {
     implementation  'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation  'com.google.maps.android:android-maps-utils:2.2.5'
     implementation 'com.google.android.gms:play-services-location:21.0.1'
+    implementation'com.squareup.okhttp3:okhttp:4.10.0'
 
 
 
