--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,10 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:21.0.1'
     implementation'com.squareup.okhttp3:okhttp:4.10.0'
 
+    implementation 'com.google.android.gms:play-services-maps:18.2.0'
+
+
+
 
 
 
