Proyecto unificado y casi listo.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         tools:targetApi="31">
         <activity
             android:name=".ChatActivity"
-            android:exported="true"
+            android:exported="false"
             android:theme="@style/Theme.Cuidame" />
         <!-- API KEY -->
         <meta-data
@@ -28,27 +28,18 @@
 
         <activity
             android:name=".Mapa"
-            android:exported="true" />
+            android:exported="false" />
+        <activity
+            android:name=".Contacto"
+            android:exported="false" />
         <activity
             android:name=".PerfilPublico"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".Perfil"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".Splash"
-            android:exported="true" />
-        <activity
-            android:name=".TipoDeRegistro"
-            android:exported="true" />
-        <activity
-            android:name=".Welcome"
-            android:exported="true" />
-        <activity
-            android:name=".MainActivity"
-            android:exported="true" />
-        <activity
-            android:name=".Login"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -56,9 +47,23 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".TipoDeRegistro"
+            android:exported="false" />
+        <activity
+            android:name=".Welcome"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true" />
+        <activity
+            android:name=".Login"
+            android:exported="false">
+        </activity>
         <activity
             android:name=".Registro"
-            android:exported="true" />
+            android:exported="false" />
 
         <meta-data
             android:name="preloaded_fonts"
