--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,9 +65,9 @@ dependencies {
 
     implementation 'com.google.android.gms:play-services-maps:18.2.0'
 
+    implementation 'com.squareup.okhttp3:okhttp:4.10.0'
 
-
-
-
-
+    implementation 'com.android.volley:volley:1.2.1'
+    implementation 'org.json:json:20210307'
+    implementation 'org.java-websocket:Java-WebSocket:1.5.3'
 }
