--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,7 @@ dependencies {
 
     //Para el splash
     implementation 'com.airbnb.android:lottie:6.1.0'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
 
 
