--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,7 @@ dependencies {
     implementation 'com.android.volley:volley:1.2.1'
     implementation 'org.json:json:20210307'
     implementation 'org.java-websocket:Java-WebSocket:1.5.3'
+
+    implementation 'com.airbnb.android:lottie:6.3.0'
+
 }
