--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,4 +77,6 @@ dependencies {
 
     implementation 'com.airbnb.android:lottie:6.3.0'
 
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
 }
