commit chat funcional

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.CAMERA"/>
-
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
         android:allowBackup="true"
@@ -24,57 +22,45 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Cuidame"
         tools:targetApi="31">
+
+        <!-- Aquí dentro está el service -->
+        <service
+            android:name=".MyFirebaseMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
+
         <activity
             android:name=".ChatActivity"
             android:exported="false"
             android:theme="@style/Theme.Cuidame" />
-        <!-- API KEY -->
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyCz7n8ZhRsqyf9FeMEaQicCH9wG2mXmzNM" />
 
-        <activity
-            android:name=".Mapa"
-            android:exported="false" />
-        <activity
-            android:name=".Contacto"
-            android:exported="false" />
-        <activity
-            android:name=".PerfilPublico"
-            android:exported="false" />
-        <activity
-            android:name=".Perfil"
-            android:exported="false" />
-        <activity
-            android:name=".Splash"
-            android:exported="true">
+        <activity android:name=".Mapa" android:exported="false" />
+        <activity android:name=".Contacto" android:exported="false" />
+        <activity android:name=".PerfilPublico" android:exported="false" />
+        <activity android:name=".Perfil" android:exported="false" />
+        <activity android:name=".Splash" android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity
-            android:name=".TipoDeRegistro"
-            android:exported="false" />
-        <activity
-            android:name=".Welcome"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
-            android:exported="true" />
-        <activity
-            android:name=".Login"
-            android:exported="false">
-        </activity>
-        <activity
-            android:name=".Registro"
-            android:exported="false" />
+        <activity android:name=".TipoDeRegistro" android:exported="false" />
+        <activity android:name=".Welcome" android:exported="false" />
+        <activity android:name=".MainActivity" android:exported="true" />
+        <activity android:name=".Login" android:exported="false" />
+        <activity android:name=".Registro" android:exported="false" />
 
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
+
     </application>
 
 </manifest>
